--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     height: 220px; /* Adjust height as needed */
     border: none;
   }
+  .italic {
+  font-style: italic;
+}
 </style>
 
 <!--   Global site tag (gtag.js) - Google Analytics-->
@@ -121,10 +124,17 @@
 <section class="hero teaser is-small">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <!--
       <h2 class="subtitle has-text-centered" style="font-size: 1.38rem; color: #1c1c1c">
         We present <span style="color: #2fd3fc"><b>EasyTalking</b></span>,
         <p>
         a cross-modal style controllable emotional talking head generation method.
+      </h2>
+      -->
+
+      <h2 class="subtitle has-text-centered" style="font-size: 1.38rem; color: #1c1c1c">
+        <span class="italic" style="color: #cd3925" ><b>(AAAI Rebuttal: We have uploaded some new results.)</b></span>
+        <p>
       </h2>
     </div>
   </div>
@@ -213,10 +223,39 @@
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
+    <h3 class="title is-4">More cases<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
+    WIP.
+    <div id="results-carousel" class="carousel results-carousel">
+      <div class="item item-compare1">
+        <div class="section-title">
+          <h4 class="title is-5">Emotion: Anger</h5>
+        </div>
+        <div class="iframe-container-one-small">
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/45bvhx?loop=0" width="1278" style="border:none;"></iframe>
+        </div>
+      </div>
+      <div class="item item-compare2">
+        <div class="section-title">
+          <h4 class="title is-5">Emotion: Surprised</h5>
+        </div>
+        <div class="iframe-container-one-small">
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/j82mim?loop=0" width="1278" style="border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Style Control</h3>
     <div class="iframe-container">
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/lph5n9?loop=0" width="1920" style="border:none;"></iframe>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h3 class="title is-4">Multi-modal Alignment Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
+    WIP.
+    <div class="iframe-container-one">
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
@@ -265,6 +304,13 @@
           <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/tcggpn?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
+    </div>
+
+    <p>&nbsp;&nbsp;&nbsp;</p>
+    <h3 class="title is-4">Multi-modal Alignment Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
+    WIP.
+    <div class="iframe-container-one">
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
   </div>
