--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     height: 220px; /* Adjust height as needed */
     border: none;
   }
+  .iframe-container-four iframe {
+    width: 24%; /* Adjust width as needed */
+    height: 240px; /* Adjust height as needed */
+    border: none;
+  }
   .italic {
   font-style: italic;
 }
@@ -167,7 +172,7 @@
         <h2 class="title is-3">Video Intro</h2>
         <h2 class="subtitle has-text-centered">
           (If the video is slightly lagging behind the audio, please try using a different device.) </h2>
-          <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/y1rni7?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
+          <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/6egv2p?loop=0" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
       </div>
     </div>
   </div>
@@ -209,7 +214,7 @@
           <h4 class="title is-5">Emotion: Anger</h5>
         </div>
         <div class="iframe-container-one-small">
-          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/45bvhx?loop=0" width="1278" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/ut8m90?loop=0" width="1278" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
@@ -217,7 +222,7 @@
           <h4 class="title is-5">Emotion: Surprised</h5>
         </div>
         <div class="iframe-container-one-small">
-          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/j82mim?loop=0" width="1278" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/ywd2wq?loop=0" width="1278" style="border:none;"></iframe>
         </div>
       </div>
     </div>
@@ -225,30 +230,17 @@
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">More cases<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
     WIP.
-    <div id="results-carousel" class="carousel results-carousel">
-      <div class="item item-compare1">
-        <div class="section-title">
-          <h4 class="title is-5">Emotion: Anger</h5>
-        </div>
-        <div class="iframe-container-one-small">
-          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/45bvhx?loop=0" width="1278" style="border:none;"></iframe>
-        </div>
-      </div>
-      <div class="item item-compare2">
-        <div class="section-title">
-          <h4 class="title is-5">Emotion: Surprised</h5>
-        </div>
-        <div class="iframe-container-one-small">
-          <iframe allow="fullscreen" allowfullscreen height="426" src="https://streamable.com/e/j82mim?loop=0" width="1278" style="border:none;"></iframe>
-        </div>
-      </div>
+
+    <div class="iframe-container-four">
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/047ew7?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/fht9m5?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Style Control</h3>
     <div class="iframe-container">
-      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
-      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/lph5n9?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/yd9d14?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/xxyx0x?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
@@ -266,12 +258,12 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/mec38d?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/wa7lss?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/v05x5m?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/p7md5j?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
@@ -281,12 +273,12 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/82r540?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/ppr0lm?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/rnj25t?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/m4do51?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
@@ -296,21 +288,21 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/vmxg0y?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/hm9qj8?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/tcggpn?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/j6hhut?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
-    <h3 class="title is-4">Multi-modal Alignment Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
+    <h3 class="title is-4">Different Expression Source Image Driven Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
     WIP.
     <div class="iframe-container-one">
-      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/41lnd7?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
   </div>
@@ -344,12 +336,12 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/0tvuqi?" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/x5mt7x?" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/b5su3d?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/hlkmor?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
@@ -362,12 +354,12 @@
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/oqao5x?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/twl0ze?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/6rwu2j?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/wz7lwc?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
@@ -414,12 +406,12 @@ We conduct a user study with 30 users. We randomly select 10 speeches from the t
     <div id="results-carousel" class="carousel results-carousel">
       <div class="item item-compare1">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/7j5sob?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/1q5842?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
       <div class="item item-compare2">
         <div class="iframe-container-one">
-          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/8pdzu4?loop=0" width="1280" style="border:none;"></iframe>
+          <iframe allow="fullscreen" allowfullscreen height="720" src="https://streamable.com/e/8fikrh?loop=0" width="1280" style="border:none;"></iframe>
         </div>
       </div>
     </div>
