--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <h3 class="title is-4">Multi-modal Alignment Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
     WIP.
     <div class="iframe-container-one">
-      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/b3kply?loop=0" width="1920" style="border:none;"></iframe>
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/qywgoh?loop=0" width="1920" style="border:none;"></iframe>
     </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
