--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">More cases<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
-    WIP.
-
+    We demonstrate our generalizability by providing in-the-wild speech samples and conducting experiments on a Chinese dataset, CHERMA. Some cases are shown below.
     <div class="iframe-container-four">
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/047ew7?loop=0" width="1920" style="border:none;"></iframe>
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/fht9m5?loop=0" width="1920" style="border:none;"></iframe>
@@ -245,7 +244,7 @@
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Alignment Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
-    WIP.
+    Here are examples generated with prompts of different modalities from the same source.
     <div class="iframe-container-one">
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/qywgoh?loop=0" width="1920" style="border:none;"></iframe>
     </div>
@@ -300,7 +299,7 @@
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Different Expression Source Image Driven Results<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
-    WIP.
+    Our model can generate varied expressions within the same emotion class through different expression style prompts.
     <div class="iframe-container-one">
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/41lnd7?loop=0" width="1920" style="border:none;"></iframe>
     </div>
