--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">More cases<span class="italic" style="color: #ea3017" ><b> (New!)</b></span></h3>
     We demonstrate our generalizability by providing in-the-wild speech samples and conducting experiments on a Chinese dataset, CHERMA. Some cases are shown below.
-    <div class="iframe-container-four">
+    <div class="iframe-container">
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/047ew7?loop=0" width="1920" style="border:none;"></iframe>
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/fht9m5?loop=0" width="1920" style="border:none;"></iframe>
     </div>
