--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/047ew7?loop=0" width="1920" style="border:none;"></iframe>
       <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/fht9m5?loop=0" width="1920" style="border:none;"></iframe>
     </div>
+    <div class="iframe-container-one-small">
+      <iframe allow="fullscreen" allowfullscreen height="1080" src="https://streamable.com/e/2s61hf?loop=0" width="1920" style="border:none;"></iframe>
+    </div>
 
     <p>&nbsp;&nbsp;&nbsp;</p>
     <h3 class="title is-4">Multi-modal Style Control</h3>
